# Rust_Assesment

./: README.md  main.rs
Question_1/: Cargo.toml
Question_1/src/: main.rs
Question_2/: Cargo.toml
Question_2/src/: main.rs
Question_3/: Cargo.toml
Question_3/src/: main.rs
Question_4/: Cargo.toml  btc_prices.json
Question_4(1)/: Cargo.toml
Question_4/src/: main.rs
